fixed : issues with overflow

--- a/electronics-website/src/index.css
+++ b/electronics-website/src/index.css
@@ -11,7 +11,7 @@
 }
 *::after,*::before{box-sizing: border-box;}
 body {
-  overflow: hidden;
+  overflow-x: hidden;
   margin: 0 auto;
   max-width: 97.5%;
   text-align: center;
