--- a/electronics-website/src/styles/Navbar.module.css
+++ b/electronics-website/src/styles/Navbar.module.css
@@ -42,7 +42,8 @@ aside{
 }
 aside a{
     color: white;
-    font-size: 32px;
+    font-size: 48px;
+    font-weight: 500;
     text-decoration: none;
     font-family: 'Inter',sans-serif;
 }
@@ -52,7 +53,7 @@ aside a:hover{
 
 @media screen and (min-width: 768px) and (max-width: 1023px){
     .searchInput{
-        width: 300px;
+        width: 350px;
     }
     .container {
         padding: 15px 40px;
@@ -60,7 +61,7 @@ aside a:hover{
 }
 @media screen and (min-width: 425px) and (max-width: 767px) {
     .searchInput {
-        width: 150px;
+        width: 200px;
         height: 40px;
         font-size: 12px;
         padding: 15px;
